# Avalon_Automation

./: requirements.txt
.devcontainer/: devcontainer.json
MCPServer/: Excel.py  Fusion_Automation.py  Fusion_Automation_mcp.py  pyproject.toml  requirements.txt  web_app_Testing.py
MCPServer/Server/: HCM_Automation.py  Server_Individual.py  Server_Prompt.py  pyproject.toml  server.py
