[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "formulas>=1.3.3",
    "langchain>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "mcp[cli]>=1.23.1",
    "messagebox>=0.1.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "selenium>=4.38.0",
    "streamlit>=1.52.1",
    "tabulate>=0.9.0",
    "typing>=3.10.0.0",
    "webdriver-manager>=4.0.2",
]

[tool.uv.workspace]
members = [
    "server",
]
